[package]
name = "usb_audio"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
embassy-stm32 = { path = "../embassy/embassy-stm32", features = [
    "defmt",
    "stm32h562vg",
    "memory-x",
    "time-driver-any",
    "exti",
    "unstable-pac",
] }

embassy-sync = { path = "../embassy/embassy-sync", features = ["defmt"] }

embassy-executor = { path = "../embassy/embassy-executor", features = [
    "platform-cortex-m",
    "executor-thread",
    "defmt",
] }

embassy-time = { path = "../embassy/embassy-time", features = [
    "defmt",
    "defmt-timestamp-uptime",
    "tick-hz-1_000_000",
] }

embassy-usb = { path = "../embassy/embassy-usb", features = ["defmt"] }

embassy-futures = { path = "../embassy/embassy-futures" }

defmt = "1"
defmt-rtt = "1"

cortex-m = { version = "0.7.6", features = [
    "inline-asm",
    "critical-section-single-core",
] }

cortex-m-rt = "0.7"

panic-probe = { version = "1", features = ["print-defmt"] }

heapless = { version = "0.8", default-features = false }
static_cell = "2"
micromath = "2"
critical-section = "1.1"

[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = "fat"
opt-level = 3
overflow-checks = false
